--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 32
     defaultConfig {
         applicationId "com.leon.detonator"
         minSdkVersion 23
-        targetSdkVersion 30
+        targetSdkVersion 32
         versionCode 60
-        versionName "1.3.1"
+        versionName "1.3.5"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
@@ -49,6 +49,7 @@ android {
         }
     }
     ndkVersion '21.1.6352462'
+    namespace 'com.leon.detonator'
     configurations.all {
         resolutionStrategy.force 'com.android.support:support-annotations:27.1.1'
     }
