APK_1.3.16： 1.删除雷管后，其他雷管延期不改变 2.在线检测时如果列表出现负数会提示并不能继续 3.Log文件太大导致死机
APK_1.3.17：
1.所有操作加上日志
2.上传超时退出
3.网络不好死机问题
4.所有提示框字体变大

APK_1.4.0：
1.减小apk文件大小
2.修改电压电流读取方式为单指令
3.充电前和充电后都增加批量在线检测

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
     <uses-permission
         android:name="android.permission.MODIFY_PHONE_STATE"
         tools:ignore="ProtectedPermissions" />
@@ -59,6 +60,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activity.SchemeActivity" />
         <activity android:name=".activity.BaiSeDetectorActivity" />
         <activity android:name=".activity.BaiSeDataActivity" />
         <activity android:name=".activity.ChargeActivity" />
